--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.9.3",
     "@use-gesture/react": "^10.2.27",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -19,6 +21,9 @@
     "underscore": "^1.13.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/underscore": "^1.11.5",
@@ -29,8 +34,12 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
